created a form to allow the user to add bookmarks

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -5,3 +5,9 @@
     </a>
   </li>
 </ul>
+
+<form novalidate class="css-form">
+  Name: <input type="text" ng-model="main.form_bookmark.name" required /><br />
+  URL: <input type="text" ng-model="main.form_bookmark.url" required /><br />
+  <input type="submit" ng-click="main.addBookmark()" value="Add" />
+</form>
