--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,6 +3,7 @@
     <a href="{{bookmark.url}}">
       {{bookmark.name}}
     </a>
+    <span ng-click="main.removeBookmark(bookmark)">[delete]</span>
   </li>
 </ul>
 
