renamed things in in main.controller.js to camelCase

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,8 +2,8 @@
   <h1>Bookmark Manager</h1>
 
   <form novalidate class="navbar-form">
-    <input type="text" class="form-control" placeholder="Name" ng-model="main.form_bookmark.name" required />
-    <input type="text" class="form-control" placeholder="URL" ng-model="main.form_bookmark.url" required />
+    <input type="text" class="form-control" placeholder="Name" ng-model="main.formBookmark.name" required />
+    <input type="text" class="form-control" placeholder="URL" ng-model="main.formBookmark.url" required />
 
     <input type="submit" class="btn btn-default" ng-click="main.addBookmark()" value="Add" />
   </form>
