--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,10 +2,10 @@
   <h1>Bookmark Manager</h1>
 
   <form novalidate class="navbar-form">
-    <input type="text" class="form-control" placeholder="Name" ng-model="main.formBookmark.name" required />
-    <input type="text" class="form-control" placeholder="URL" ng-model="main.formBookmark.url" required />
+    <input type="text" class="form-control" placeholder="Name" ng-model="bookmarkform.fields.name" required />
+    <input type="text" class="form-control" placeholder="URL" ng-model="bookmarkform.fields.url" required />
 
-    <input type="submit" class="btn btn-default" ng-click="main.addBookmark()" value="Add" />
+    <input type="submit" class="btn btn-default" ng-click="bookmarkform.addBookmark()" value="Add" />
   </form>
 
   <h4>Bookmarks:</h4>
@@ -19,7 +19,7 @@
 	    </a>
           </td>
           <td class="text-right text-nowrap">
-            <button class="btn btn-xs btn-warning" ng-click="main.removeBookmark(bookmark)">
+            <button class="btn btn-xs btn-warning" ng-click="bookmarkform.removeBookmark(bookmark)">
               <span class="glyphicon glyphicon-trash"></span>
             </button>
           </td>
